--- a/Pefil.html
+++ b/Pefil.html
@@ -214,7 +214,7 @@
             <p><strong>Correo Electrónico:</strong> ismael.caceres@ucsp.edu.pe</p>
             <p><strong>Número de Contacto:</strong> +51 972 818 929</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ismael-valentin-caceres-gallegos-b55abb366/" target="_blank">linkedin.com/in/ismaelcaceres</a></p>
-            <p><strong>GitHub:</strong> <a href="https://github.com/Ismael-caceres" target="_blank">github.com/Ismael-caceres</a></p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/Ismael-Caceres" target="_blank">github.com/Ismael-Caceres</a></p>
         </div>
     </div>
 </body>
