--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph (imagen cuando se comparte) -->
     <meta property="og:title" content="PERFIL - Ismael Valentín Cáceres Gallegos">
     <meta property="og:description" content="Perfil profesional de Ismael Valentín Cáceres Gallegos, estudiante de Administración de Negocios">
-    <meta property="og:image" content="/home/lixmax03/Documentos/PROYECTOS/logo_2020_ucsp.png">
+    <meta property="og:image" content="logo_2020_ucsp.png">
     <meta property="og:url" content="https://tudominio.com/perfil">
     <meta property="og:type" content="website">
 
@@ -155,7 +155,7 @@
             </div>
             
             <div class="profile-image">
-                <img src="/home/lixmax03/Documentos/PROYECTOS/foto" alt="Foto de Ismael Valentín Cáceres Gallegos">
+                <img src="/https://github.com/Ismael-Caceres/Ismael-Valentin-Caceres-Gallegos/commit/fb0b76ca2b8ef6371cb78c8e76de315b8caa5a3a">
             </div>
         </div>
         
