--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             
             <div class="profile-image">
-                <img src="/https://github.com/Ismael-Caceres/Ismael-Valentin-Caceres-Gallegos/blob/main/foto">
+                <img src="/https://github.com/Ismael-Caceres/Ismael-Valentin-Caceres-Gallegos/blob/main/foto" alt="Foto de Ismael Cáceres">
             </div>
         </div>
         
