--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             
             <div class="profile-image">
-                <img src="foto" alt="Foto de Ismael Cáceres">
+                <img src="foto.png" alt="Foto de Ismael Cáceres">
             </div>
         </div>
         
