--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             
             <div class="profile-image">
-                <img src="foto.png" alt="Ismael Valentín Cáceres Gallegos" width="200"> 
+                <img src="foto.png" type="image/x-icon">
             </div>
         </div>
         
