--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             
             <div class="profile-image">
-                <img src="foto.png" type="image/x-icon">
+                <img src="foto.png" type="image/x-icon" width="200">
             </div>
         </div>
         
