--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             
             <div class="profile-image">
-                <img src="foto.png" type="image/x-icon" width="500">
+                <img src="foto.png" type="image/x-icon" style="width: 300px; height: auto; border-radius: 5px;">
             </div>
         </div>
         
