--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             </div>
             
             <div class="profile-image">
-                <img src="foto.png" type="image/x-icon" style="width: 300px; height: auto; border-radius: 5px;">
+                <img src="foto.png" type="image/x-icon" 
+                    style="width: 500px; height: auto; border-radius: 10px;">
             </div>
         </div>
         
