--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             
             <div class="profile-image">
                 <img src="foto.png" type="image/x-icon" 
+                     alt="Foto de Ismael Cáceres" 
                      style="width: 500px; height: auto; border-radius: 10px;">
             </div>
         </div>
