--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <ul>
                     <li>Jimena Campos</li>
                     <li>Angueli Calderon</li>
-                    <li><a https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>
+                    <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>
                     <li>Anthnoy Mamani</li>
                 </ul>
             </div>
