--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image" content="logo_2020_ucsp.png">
     <meta property="og:url" content="https://tudominio.com/perfil">
     <meta property="og:type" content="website">
+    <meta name="google-site-verification" content="EiZb20V_Q4RGyM-C1CvIeZg7zPY2WoID0PGniTDkLQ4" />
 
 
     <style>
