--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div>
                 <h2>Compañeros</h2>
                 <ul>
-                    <li>Jimena Campos</li>
+                    <li><a href="https://github.com/jimenaq25/Jimena-Sofia-Quiroz-Bautista" target="_blank">Jimena Quiroz</a></li>  
                     <li>Angueli Calderon</li>
                     <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>  
                     <li>Anthnoy Mamani</li>
@@ -214,7 +214,6 @@
         <div class="contact-section">
             <h2>Contactos</h2>
             <p><strong>Correo Electrónico:</strong> ismael.caceres@ucsp.edu.pe</p>
-            <p><strong>Número de Contacto:</strong> +51 972 818 929</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ismael-valentin-caceres-gallegos-b55abb366/" target="_blank">linkedin.com/in/ismaelcaceres</a></p>
             <p><strong>GitHub:</strong> <a href="https://github.com/Ismael-Caceres" target="_blank">github.com/Ismael-Caceres</a></p>
         </div>
