--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <p><strong>Facultad:</strong> <a href="https://ucsp.edu.pe/departamentos/ciencias-economicas-y-empresariales/" target="_blank"> Ciencias Económicas Empresariales y Humanas</a></p>
                 <p><strong>Departamento:</strong> <a href="https://ucsp.edu.pe/investigacion/institutos-centros/ceee/presentacion/" target="_blank"> Ciencias Económicas y empresariales</a></p>                
                 <p><strong>Código Académico:</strong> 231-101-60445</p>
-                <p><strong>Lenguas dominadas:</strong> Español (nativo), Inglés (medio), Portugués (básico)</p>
+                <p><strong>Lengua:</strong> Español </p>
             </div>
             
             <div class="profile-image">
