--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h2>Docentes</h2>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/ecuadrosv/" target="_blank">Dr. Ernesto Cuadros Vargas</a></li> 
-                    <li>Mg. Miguel Fernando Salomón Valdivia</li>
+                    <li><a href="https://www.linkedin.com/in/miguel-salomon-529453125/" target="_blank">Mg. Miguel Fernando Salomón Valdivia</a></li>          
                     <li>Mg. Pablo Plinio Nuñez Saija</li>
                     <li>Mg. Martín Quintanilla Rodríguez</li>
                     <li>Mg. Daniel Huanca Mosaja</li>
@@ -202,9 +202,11 @@
             <div>
                 <h2>Compañeros</h2>
                 <ul>
-                    <li><a href="https://github.com/jimenaq25/Jimena-Sofia-Quiroz-Bautista" target="_blank">Jimena Quiroz</a></li>  
-                    <li>Angueli Calderon</li>
-                    <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>  
+                    <li><a href="https://github.com/jimenaq25/Jimena-Sofia-Quiroz-Bautista/" target="_blank">Jimena Quiroz</a></li>  
+                    <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/" target="_blank">Angueli Calderon</a></li>
+                    <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>
+                    <li><a href="https://sergipalomino.github.io/Perfil.Sergio.PR/" target="_blank">Sergio Palomino</a></li>  
+                    <li><a href="https://krisletyahairajuarezarce.github.io/Krislet-Yahaira-Juarez-Arce/" target="_blank">Krislet Juarez</a></li>                      
                     <li>Anthnoy Mamani</li>
                 </ul>
             </div>
