--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div>
                 <h2>Compañeros</h2>
                 <ul>
-                    <li><a href="https://github.com/jimenaq25/Jimena-Sofia-Quiroz-Bautista/" target="_blank">Jimena Quiroz</a></li>  
+                    <li><a href="https://jimenaq25.github.io/Jimena-Sofia-Quiroz-Bautista//" target="_blank">Jimena Quiroz</a></li>   
                     <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/" target="_blank">Angueli Calderon</a></li>
                     <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>
                     <li><a href="https://sergipalomino.github.io/Perfil.Sergio.PR/" target="_blank">Sergio Palomino</a></li>  
