--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                     <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/" target="_blank">Angueli Calderon</a></li>
                     <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Valentina Bedregal</a></li>
                     <li><a href="https://sergipalomino.github.io/Perfil.Sergio.PR/" target="_blank">Sergio Palomino</a></li>  
-                    <li><a href="https://krisletyahairajuarezarce.github.io/Krislet-Yahaira-Juarez-Arce/" target="_blank">Krislet Juarez</a></li>                      
-                    <li>Anthnoy Mamani</li>
+                    <li><a href="https://krisletyahairajuarezarce.github.io/Krislet-Yahaira-Juarez-Arce/" target="_blank">Krislet Juarez</a></li>   
+                    <li><a href="https://helbertmamani.github.io/helbert.github.io/" target="_blank">Anthnoy Mamani</a></li>     
                 </ul>
             </div>
         </div>
